[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "turbine"
dynamic = ["version"]
description = ''
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
keywords = []
authors = [
  { name = "abhishekbhakat", email = "abhishek.bhakat@hotmail.com" },
]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: Implementation :: CPython",
  "Programming Language :: Python :: Implementation :: PyPy",
]
dependencies = [
    "click",
    "pyyaml",
    "docker",
]

[project.optional-dependencies]
dev = [
    "hatch==1.12.0",
    "pytest==8.2.2",
    "pytest-asyncio==0.23.7",
    "pytest-cov==5.0.0",
    "pre-commit==3.7.1",
    "ruff==0.5.1",
]

[project.scripts]
turbine = "turbine.cli:cli"

[project.urls]
Documentation = "https://github.com/abhishekbhakat/turbine#readme"
Issues = "https://github.com/abhishekbhakat/turbine/issues"
Source = "https://github.com/abhishekbhakat/turbine"

[tool.hatch.version]
path = "src/turbine/__about__.py"

[tool.hatch.envs.types]
extra-dependencies = [
  "mypy>=1.0.0",
]
[tool.hatch.envs.types.scripts]
check = "mypy --install-types --non-interactive {args:src/turbine tests}"

[tool.coverage.run]
source_pkgs = ["turbine", "tests"]
branch = true
parallel = true
omit = [
  "src/turbine/__about__.py",
]

[tool.coverage.paths]
turbine = ["src/turbine", "*/turbine/src/turbine"]
tests = ["tests", "*/turbine/tests"]

[tool.coverage.report]
exclude_lines = [
  "no cov",
  "if __name__ == .__main__.:",
  "if TYPE_CHECKING:",
]

[tool.ruff]
line-length = 254
indent-width = 4
fix = true
preview = true

lint.select = [
    "E",  # pycodestyle errors
    "F",  # pyflakes
    "I",  # isort
    "W",  # pycodestyle warnings
    "C90",  # Complexity
    "C",  # flake8-comprehensions
    "ISC",  # flake8-implicit-str-concat
    "T10",  # flake8-debugger
    "A",  # flake8-builtins
    "UP",  # pyupgrade
]

lint.ignore = [
    "C416",
    "C408"
]

lint.fixable = ["ALL"]
lint.unfixable = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

[tool.ruff.lint.isort]
combine-as-imports = true
